[FEATURE] WIP Login & Created Account

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ReaderApp</string>
+    <string name="create_acct">Please enter a valid email and paswordd that is at least 6 characters</string>
 </resources>
